ifds/src/tests/icfg/orig/snapshots/ifds__tests__icfg__orig__convert__test_ir_functions_rename_regs_dot.snap
---
source: src/tests/icfg/orig/convert.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (0) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (2) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (8) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (9) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (10) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (12) at (0, 2) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Call(mytest, [0], [0])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (1) at (3, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%5$}] (3) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (4) at (3, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%5$}] (5) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (6) at (3, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%5$}] (7) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (11) at (3, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%5$}] (13) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (14) at (3, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%5$}] (15) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%6$}] (16) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (17) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%5$}] (18) at (5, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%6$}] (19) at (4, 2) { };
\node[font=\tiny] (note_2) at (1.5, 0.5) {Assign(6, 5)};
\node[font=\tiny] (note_3) at (1.5, 1.5) {Return([6])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (9);
		\path[->, blue] (0) [bend right] edge  node { } (10);
		\path[->, blue] (1) [loop right] edge  node { } (1);
		\path[->, blue] (0) [bend right] edge  node { } (12);
		\path[->, blue] (3) [loop right] edge  node { } (3);
		\path[->, blue] (1) [bend right] edge  node { } (14);
		\path[->, blue] (3) [bend right] edge  node { } (15);
		\path[->, blue] (3) [bend right] edge  node { } (16);
		\path[->, blue] (1) [bend right] edge  node { } (17);
		\path[->, blue] (3) [bend right] edge  node { } (18);
		\path[->, blue] (3) [bend right] edge  node { } (19);


                \end{tikzpicture}
            \end{document}
