ifds/src/tests/icfg/orig/snapshots/ifds__tests__icfg__orig__convert__test_ir_return_values_dot.snap
---
source: src/tests/icfg/orig/convert.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (0) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (1) at (1, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (2) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (3) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (4) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (16) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (18) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (21) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (22) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (23) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (24) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (25) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (37) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (38) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (39) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (40) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (41) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (43) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (53) at (1, 1) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Call(mytest, [0], [1])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (5) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (6) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (7) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (8) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (9) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (10) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (11) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (12) at (6, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (13) at (5, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (14) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (15) at (5, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (17) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (19) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (20) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (26) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (27) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (28) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (29) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (30) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (31) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (32) at (6, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (33) at (5, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (34) at (4, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (35) at (6, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (36) at (5, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (42) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (44) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (45) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (46) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (47) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (48) at (5, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (49) at (6, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (50) at (4, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (51) at (5, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (52) at (6, 3) { };
\node[font=\tiny] (note_2) at (2.5, 0.5) {Const(0, 2.0)};
\node[font=\tiny] (note_3) at (2.5, 1.5) {Const(1, 3.0)};
\node[font=\tiny] (note_4) at (2.5, 2.5) {Return([1])};
		\path[->] (0) edge (3);
		\path[->] (1) edge (23);
		\path[->] (0) edge (4);
		\path[->] (3) edge (25);
		\path[->, green] (3) [bend left] edge node { } (5);
		\path[->, green] (4) [bend left] edge node { } (19);
		\path[->] (5) edge (8);
		\path[->] (6) edge (29);
		\path[->] (5) edge (9);
		\path[->] (8) edge (11);
		\path[->] (9) edge (12);
		\path[->] (8) edge (13);
		\path[->] (11) edge (34);
		\path[->] (12) edge (35);
		\path[->] (13) edge (36);
		\path[->, red] (11) [bend right] edge  node { } (25);
		\path[->, red] (13) [bend right] edge  node { } (38);
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (3);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (5) [loop right] edge  node { } (5);
		\path[->, blue] (0) [bend right] edge  node { } (25);
		\path[->, blue] (19) [loop right] edge  node { } (19);
		\path[->, blue] (5) [bend right] edge  node { } (8);
		\path[->, blue] (5) [bend right] edge  node { } (9);
		\path[->, blue] (5) [bend right] edge  node { } (11);
		\path[->, blue] (5) [bend right] edge  node { } (13);
		\path[->, blue] (5) [bend right] edge  node { } (12);
		\path[->, blue] (5) [bend right] edge  node { } (34);
		\path[->, blue] (5) [bend right] edge  node { } (36);
		\path[->, blue] (5) [bend right] edge  node { } (35);
		\path[->, blue] (0) [bend right] edge  node { } (53);


                \end{tikzpicture}
            \end{document}
